deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-frontend-ingress
  namespace: local-ai-admin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - admin-ai.skpodduturi.dev
      secretName: admin-frontend-skpodduturi-tls
  rules:
    - host: admin-ai.skpodduturi.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-frontend
                port:
                  number: 80
